Fixed nav bar width on Mobile

--- a/inet.css
+++ b/inet.css
@@ -188,9 +188,6 @@ iframe {
     #header img{
         width:100%;
     }
-    #nav li{
-        width:49%;
-    }
 }
 
 /* Sets Styles for Social Media Share Buttons */
